# polyhunter

./: .env.example  .gitignore  pyproject.toml
backend/: config.py  main.py
backend/api/: deps.py  schemas.py
backend/api/routes/: auto_trade.py  markets.py  overview.py  positions.py  signals.py  trades.py
backend/btc/: market_finder.py  monte_carlo.py  predictor.py  price_feed.py  realtime_feed.py
backend/crawler/: clob_client.py  gamma_client.py  market_crawler.py  price_crawler.py
backend/db/: database.py  models.py
backend/signals/: ai_predictor.py  anomaly.py  arbitrage.py  base.py
backend/trader/: executor.py  position_tracker.py  risk_manager.py
docs/superpowers/plans/: 2026-04-07-polyhunter-plan-a-backend-core.md  2026-04-07-polyhunter-plan-b-trading-api.md
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/components/: sidebar.tsx
frontend/lib/: api.ts  types.ts
scripts/: btc_5m_trader.py  btc_scanner.py  execute_arb.py  scanner.py  set_allowances.py  setup_api.py
tests/: conftest.py  test_ai_predictor.py  test_anomaly.py  test_api_markets.py  test_api_overview.py  test_api_signals.py  test_api_trades.py  test_arbitrage.py  test_btc_market_finder.py  test_btc_monte_carlo.py  test_btc_predictor.py  test_btc_price_feed.py  test_btc_realtime_feed.py  test_circuit_breaker.py  test_clob_client.py  test_config.py  test_e2e_trading.py  test_executor.py  test_gamma_client.py  test_market_crawler.py  test_models.py  test_position_tracker.py  test_price_crawler.py  test_risk_manager.py
(+5 files in other folders)
