[project]
name = "polyhunter"
version = "0.1.0"
description = "Polymarket quantitative trading system"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "py-clob-client>=0.34",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
